--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
-    max-width: 1600px;
-    height: 600px;
+    width: 100%;
+    // max-width: 1600px;
+    // height: 600px;
     background-image: linear-gradient(
             to right,
             rgba(47, 48, 58, 0.4),
@@ -10,11 +11,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 200px 0;
+    padding: 118px 0;
+    // padding: 200px 0;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 94px;
+    margin-bottom: 60px;
+    // margin-bottom: 94px;
 }
 .hero-btnn {
     font-family: inherit;
@@ -32,15 +35,31 @@
     &:focus {
         background-color: $hover-color;
     }
+    @media screen and (min-width: 1200px) {
+        margin-right: 0;
+    }
 }
 
 .hero-title {
     text-align: center;
     letter-spacing: 0.06em;
-    @include font(44px, $btn-color, 1.36, 900);
+    @include font(26px, $btn-color, 1.62, 900);
     text-transform: uppercase;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    max-width: 696px;
-    display: block;
+    margin: 0 auto 30px auto;
+    width: 360px;
+    @media screen and (min-width: 480px) {
+        text-align: center;
+        letter-spacing: 0.06em;
+        @include font(26px, $btn-color, 1.62, 900);
+        text-transform: uppercase;
+        margin: 0 auto 30px auto;
+        width: 360px;
+    }
+    @media screen and (min-width: 1200px) {
+        @include font(44px, $btn-color, 1.36, 900);
+        width: 696px;
+        margin: 0 auto;
+        margin-bottom: 30px;
+        display: block;
+    }
 }
