--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './base/extend-style';
 @import './utils/variables';
 @import './utils/mixin';
+@import './utils/breakpoints';
 @import './base/common';
 @import './components/btn';
 @import './components/container';
