--- a/css/main.css
+++ b/css/main.css
@@ -422,9 +422,10 @@ main {
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin: 30px;
   margin-bottom: 10px;
-  width: 270px;
+  display: flex;
+  justify-content: center;
 }
 
 .section-box-title {
@@ -480,18 +481,32 @@ main {
 }
 
 .peculiarities {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
+  margin: 0 15px;
   padding: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .peculiarities {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: -15px;
+  }
+}
+
 .peculiarities__list {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
-  margin-right: 30px;
+  margin-bottom: 136px;
+}
+
+@media screen and (min-width: 768px) {
+  .peculiarities__list {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
 }
 
 .peculiarities__icon {
@@ -505,7 +520,7 @@ main {
   line-height: 1.71;
   font-weight: 400;
   letter-spacing: 0.03em;
-  width: 270px;
+  margin-bottom: 30px;
 }
 
 .peculiarities__antena {
@@ -792,6 +807,8 @@ header .container {
 
 @media screen and (min-width: 1200px) {
   .hero-title {
+    text-align: center;
+    letter-spacing: 0.06em;
     font-size: 44px;
     color: #ffffff;
     line-height: 1.36;
