--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -3,9 +3,11 @@
     @include font(14px, $primary-title-color, 16px, 700);
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-top: 30px;
+    margin: 30px;
     margin-bottom: 10px;
-    width: 270px;
+    // width: 270px;
+    display: flex;
+    justify-content: center;
 }
 .section-box-title {
     font-family: inherit;
