--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -1,17 +1,28 @@
 .peculiarities {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
+    // display: flex;
+    // justify-content: space-between;
+    margin: 0 15px;
     padding: 0;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-left: -15px;
+    }
 }
 
 .peculiarities__list {
-    width: 270px;
+    width: 100%;
     height: 120px;
     background: #f5f4fa;
     border-radius: 4px;
-    margin-right: 30px;
+    margin-bottom: 136px;
+    @media screen and (min-width: 768px) {
+        flex-basis: calc(100% / 2 - 30px);
+        margin-left: 30px;
+    }
 }
+
 .peculiarities__icon {
     @extend %flex-elem;
     align-items: center;
@@ -20,7 +31,8 @@
 .peculiarities__text {
     @include font(14px, $secondary-title-color, 1.71);
     letter-spacing: 0.03em;
-    width: 270px;
+    // width: 270px;
+    margin-bottom: 30px;
 }
 .peculiarities__antena {
     align-items: center;
