--- a/css/main.css
+++ b/css/main.css
@@ -494,6 +494,15 @@ main {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .peculiarities {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    flex-wrap: nowrap;
+  }
+}
+
 .peculiarities__list {
   width: 100%;
   height: 120px;
@@ -506,6 +515,12 @@ main {
   .peculiarities__list {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__list {
+    width: 100%;
   }
 }
 
@@ -753,6 +768,12 @@ header .container {
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    margin-bottom: 94px;
+  }
 }
 
 .hero-btnn {
