--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -1,6 +1,4 @@
 .peculiarities {
-    // display: flex;
-    // justify-content: space-between;
     margin: 0 15px;
     padding: 0;
     @media screen and (min-width: 768px) {
@@ -8,6 +6,12 @@
         justify-content: center;
         flex-wrap: wrap;
         margin-left: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+        flex-wrap: nowrap;
     }
 }
 
@@ -20,6 +24,9 @@
     @media screen and (min-width: 768px) {
         flex-basis: calc(100% / 2 - 30px);
         margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 100%;
     }
 }
 
