--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -5,9 +5,12 @@
     text-transform: uppercase;
     margin: 30px;
     margin-bottom: 10px;
-    // width: 270px;
     display: flex;
     justify-content: center;
+    @media screen and (min-width: 768px) {
+        margin-left: 0;
+        display: block;
+    }
 }
 .section-box-title {
     font-family: inherit;
