--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,5 @@
 .hero {
     width: 100%;
-    // max-width: 1600px;
-    // height: 600px;
     background-image: linear-gradient(
             to right,
             rgba(47, 48, 58, 0.4),
@@ -12,13 +10,13 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 118px 0;
-    // padding: 200px 0;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 60px;
     @media screen and (min-width: 1200px) {
         margin-bottom: 94px;
+        padding: 200px 0;
     }
 }
 .hero-btnn {
