--- a/sass/layout/_pictures.scss
+++ b/sass/layout/_pictures.scss
@@ -1,3 +1,8 @@
+.reviews {
+    @media screen and (max-width: 1200px) {
+        display: none;
+    }
+}
 .pictures__thumb {
     position: relative;
 }
