--- a/sass/layout/_section-item.scss
+++ b/sass/layout/_section-item.scss
@@ -3,15 +3,21 @@
 }
 
 .item {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     padding-bottom: 94px;
+    margin: 0 15px;
 }
 .item__list {
+    width: 100%;
     background-color: $btn-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    margin-bottom: 30px;
+}
+.item__list:last-child {
+    margin-bottom: 60px;
 }
 .item-info__name {
     font-family: inherit;
