--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -1,11 +1,9 @@
 .peculiarities {
-    margin: 0 15px;
     padding: 0;
     @media screen and (min-width: 768px) {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        margin-left: -15px;
     }
     @media screen and (min-width: 1200px) {
         display: flex;
@@ -27,6 +25,19 @@
     }
     @media screen and (min-width: 1200px) {
         width: 100%;
+    }
+}
+.peculiarities__list:nth-child(2n + 1) {
+    @media screen and (min-width: 768px) {
+        margin-left: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-left: 30px;
+    }
+}
+.peculiarities__list:nth-child(1) {
+    @media screen and (min-width: 1200px) {
+        margin-left: 0;
     }
 }
 
