--- a/sass/layout/_section-item.scss
+++ b/sass/layout/_section-item.scss
@@ -6,7 +6,7 @@
     // display: flex;
     // justify-content: space-between;
 
-    // margin: 0 15px;
+    margin: 0 15px;
     @media screen and (min-width: 768px) {
         display: flex;
         justify-content: center;
@@ -48,6 +48,10 @@
     }
 }
 .item__img {
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        height: 460px;
+    }
     @media screen and (min-width: 768px) {
         width: 354px;
         height: 374px;
