--- a/sass/layout/_section-item.scss
+++ b/sass/layout/_section-item.scss
@@ -3,10 +3,9 @@
 }
 
 .item {
-    // display: flex;
-    // justify-content: space-between;
-
-    margin: 0 15px;
+    @media screen and (min-width: 480px) {
+        margin: 0 15px;
+    }
     @media screen and (min-width: 768px) {
         display: flex;
         justify-content: center;
@@ -16,6 +15,7 @@
         display: flex;
         justify-content: space-between;
         padding-bottom: 94px;
+        margin: 0;
     }
 }
 .item__list {
