--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,13 @@ main {
 }
 
 .section {
-  padding-bottom: 94px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-bottom: 94px;
+  }
 }
 
 .gallery-icon {
@@ -125,6 +131,12 @@ main {
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -446,6 +458,10 @@ main {
   padding-top: 60px;
 }
 
+.box {
+  padding-top: 0;
+}
+
 .social-list__item {
   width: 44px;
   height: 44px;
@@ -552,6 +568,10 @@ main {
   }
 }
 
+.peculiarities__list:last-child {
+  margin-bottom: 106px;
+}
+
 .peculiarities__icon {
   align-items: center;
   padding: 25px 0;
@@ -652,6 +672,7 @@ main {
   .item__list {
     flex-basis: calc(100% / 4 - 30px);
     margin-left: 30px;
+    margin-bottom: 0;
   }
 }
 
