--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -10,7 +10,10 @@ main {
 }
 
 .section {
-    padding-bottom: 94px;
+    padding-bottom: 60px;
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 94px;
+    }
 }
 
 .gallery-icon {
