--- a/css/main.css
+++ b/css/main.css
@@ -512,6 +512,12 @@ main {
   padding: 0;
 }
 
+@media screen and (min-width: 480px) {
+  .peculiarities {
+    margin: 0 15px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .peculiarities {
     display: flex;
