--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -1,5 +1,8 @@
 .peculiarities {
     padding: 0;
+    @media screen and (min-width: 480px) {
+        margin: 0 15px;
+    }
     @media screen and (min-width: 768px) {
         display: flex;
         justify-content: center;
