--- a/css/main.css
+++ b/css/main.css
@@ -991,17 +991,16 @@ header .container {
 .clients-box {
   display: flex;
   justify-content: space-between;
-  margin: 0;
+  margin: 0 15px;
   padding: 0;
   padding-bottom: 94px;
   border-radius: 10px #000;
+  flex-wrap: wrap;
 }
 
 .clients-box__list {
   margin: 0;
   padding: 0;
-  width: 170px;
-  height: 92px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
   cursor: pointer;
@@ -1010,8 +1009,23 @@ header .container {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 480px) {
+  .clients-box__list {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+    width: 210px;
+  }
+}
+
 .clients-box__list:hover, .clients-box__list:focus {
   border: 1px solid #2196f3;
+}
+
+@media screen and (min-width: 480px) {
+  .clients-box__list:nth-child(2n + 1) {
+    margin-left: 0;
+  }
 }
 
 .clients-box__icon {
