--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,17 +1,24 @@
 .clients-box {
     display: flex;
     justify-content: space-between;
-    margin: 0;
+    margin: 0 15px;
     padding: 0;
     padding-bottom: 94px;
     border-radius: 10px #000;
+    flex-wrap: wrap;
 }
 
 .clients-box__list {
     margin: 0;
     padding: 0;
-    width: 170px;
-    height: 92px;
+    @media screen and (min-width: 480px) {
+        flex-basis: calc(100% / 2 - 30px);
+        margin-left: 30px;
+        margin-bottom: 30px;
+        width: 210px;
+    }
+    // width: 170px;
+    // height: 92px;
     border-radius: 4px;
     border: 1px solid #afb1b8;
     cursor: pointer;
@@ -23,7 +30,11 @@
         border: 1px solid $active-color;
     }
 }
-
+.clients-box__list:nth-child(2n + 1) {
+    @media screen and (min-width: 480px) {
+        margin-left: 0;
+    }
+}
 .clients-box__icon {
     @extend %flex-elem;
     padding: 16px 32px;
