--- a/css/main.css
+++ b/css/main.css
@@ -993,9 +993,15 @@ header .container {
   justify-content: space-between;
   margin: 0 15px;
   padding: 0;
-  padding-bottom: 94px;
+  padding-bottom: 60px;
   border-radius: 10px #000;
   flex-wrap: wrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-box {
+    margin: 0;
+  }
 }
 
 .clients-box__list {
@@ -1011,10 +1017,26 @@ header .container {
 
 @media screen and (min-width: 480px) {
   .clients-box__list {
-    flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
     width: 210px;
+    height: 92px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-box__list {
+    width: 226px;
+    height: 92px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-box__list {
+    width: 170px;
+    height: 92px;
+    margin-left: 30px;
   }
 }
 
@@ -1025,6 +1047,50 @@ header .container {
 @media screen and (min-width: 480px) {
   .clients-box__list:nth-child(2n + 1) {
     margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-box__list:nth-child(2n + 1) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-box__list:nth-child(2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-box__list:nth-child(3) {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-box__list:nth-child(4) {
+    margin-left: 0;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-box__list:nth-child(4) {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-box__list:nth-child(5) {
+    margin-left: 30px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-box__list:nth-child(6) {
+    margin-bottom: 0;
   }
 }
 
