--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -3,22 +3,33 @@
     justify-content: space-between;
     margin: 0 15px;
     padding: 0;
-    padding-bottom: 94px;
+    padding-bottom: 60px;
     border-radius: 10px #000;
     flex-wrap: wrap;
+    @media screen and (min-width: 1200px) {
+        margin: 0;
+    }
 }
 
 .clients-box__list {
     margin: 0;
     padding: 0;
     @media screen and (min-width: 480px) {
-        flex-basis: calc(100% / 2 - 30px);
         margin-left: 30px;
         margin-bottom: 30px;
         width: 210px;
+        height: 92px;
     }
-    // width: 170px;
-    // height: 92px;
+    @media screen and (min-width: 768px) {
+        width: 226px;
+        height: 92px;
+        margin-left: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 170px;
+        height: 92px;
+        margin-left: 30px;
+    }
     border-radius: 4px;
     border: 1px solid #afb1b8;
     cursor: pointer;
@@ -33,6 +44,39 @@
 .clients-box__list:nth-child(2n + 1) {
     @media screen and (min-width: 480px) {
         margin-left: 0;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 0;
+    }
+}
+.clients-box__list:nth-child(2) {
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 0;
+    }
+}
+.clients-box__list:nth-child(3) {
+    @media screen and (min-width: 768px) {
+        margin-left: 30px;
+    }
+}
+.clients-box__list:nth-child(4) {
+    @media screen and (min-width: 768px) {
+        margin-left: 0;
+        margin-bottom: 0;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-left: 30px;
+    }
+}
+.clients-box__list:nth-child(5) {
+    @media screen and (min-width: 768px) {
+        margin-left: 30px;
+        margin-bottom: 0;
+    }
+}
+.clients-box__list:nth-child(6) {
+    @media screen and (min-width: 768px) {
+        margin-bottom: 0;
     }
 }
 .clients-box__icon {
