--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,40 @@ p {
   justify-content: center;
 }
 
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu__toggle {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+}
+
+.menu__toggle:hover,
+.menu__toggle:focus {
+  color: #2196f3;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #ffffff;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
 body,
 main {
   margin: auto;
@@ -793,6 +827,8 @@ main {
 
 header {
   border-bottom: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -813,14 +849,12 @@ header {
   font-family: 'Raleway', sans-serif;
   display: flex;
   align-items: center;
-  margin-top: 24px;
-  margin-bottom: 25px;
-  margin-right: 93px;
+  margin: 16px 0 16px 15px;
   font-style: normal;
-  font-size: 26px;
+  font-size: 24px;
   color: #2196f3;
-  line-height: 1.2;
-  font-weight: 700;
+  line-height: 28px;
+  font-weight: bold;
   letter-spacing: 0.03em;
 }
 
@@ -841,6 +875,17 @@ header .container {
   justify-content: space-between;
 }
 
+.nav {
+  justify-content: space-between;
+  width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .contacts {
+    display: none;
+  }
+}
+
 .contacts__link {
   color: #212121;
 }
@@ -854,6 +899,12 @@ header .container {
 
 .site-nav {
   margin-right: 50px;
+}
+
+@media screen and (min-width: 480px) {
+  .site-nav {
+    display: none;
+  }
 }
 
 .header-contacts {
