--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import './base/reset';
 @import './base/extend-style';
 @import './utils/variables';
+@import './components/menu-toggle';
+@import './components/menu-container';
 @import './utils/mixin';
 @import './utils/breakpoints';
 @import './base/common';
