--- a/css/main.css
+++ b/css/main.css
@@ -41,12 +41,15 @@ p {
 }
 
 .menu {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: space-between;
 }
 
 .menu__toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -66,12 +69,38 @@ p {
   position: fixed;
   top: 0;
   left: 0;
+  padding: 48px 83px 48px 40px;
   width: 100vw;
   height: 100vh;
   background: #ffffff;
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu {
+  position: relative;
+  display: block;
+}
+
+.mobile-menu-link {
+  display: block;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  padding-bottom: 32px;
+}
+
+.mobile-menu-link:hover, .mobile-menu-link:focus {
+  color: #2196f3;
 }
 
 body,
