--- a/sass/components/_menu-container.scss
+++ b/sass/components/_menu-container.scss
@@ -2,10 +2,33 @@
     position: fixed;
     top: 0;
     left: 0;
+    padding: 48px 83px 48px 40px;
     width: 100vw;
     height: 100vh;
     background: #ffffff;
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+}
+.menu-container.is-open {
+    transform: translateX(0);
+}
+.mobile-menu {
+    position: relative;
+    display: block;
+}
+.mobile-menu-link {
+    display: block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    color: #212121;
+    padding-bottom: 32px;
+    &:hover,
+    &:focus {
+        color: $active-color;
+    }
 }
