--- a/sass/components/_menu-container.scss
+++ b/sass/components/_menu-container.scss
@@ -25,10 +25,52 @@
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.02em;
-    color: #212121;
+    color: $primary-title-color;
     padding-bottom: 32px;
     &:hover,
     &:focus {
         color: $active-color;
     }
+}
+.mobile-menu-contacts {
+    padding-bottom: 32px;
+}
+.mobile-menu-contacts:nth-last-child(1) {
+    padding-bottom: 64px;
+}
+.mobile-menu-phone {
+    @include font(34px, $primary-title-color, 40px, 500);
+
+    &:hover,
+    &:focus {
+        color: $active-color;
+    }
+}
+.mobile-menu-email {
+    @include font(24px, $secondary-title-color, 28px, 500);
+    &:hover,
+    &:focus {
+        color: $active-color;
+    }
+}
+.mobile-menu-2 {
+    position: relative;
+    display: block;
+    top: 200px;
+}
+.menu-social {
+    position: relative;
+    top: 30%;
+    display: flex;
+    align-items: flex-end;
+    cursor: pointer;
+}
+.mobile-menu-social-link {
+    @include font(18px, $active-color, 22px, 500);
+}
+.line::after {
+    content: '';
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+    margin: 10px;
 }
