--- a/sass/components/_menu-container.scss
+++ b/sass/components/_menu-container.scss
@@ -9,6 +9,9 @@
     z-index: 999;
     transform: translateX(100%);
     transition: transform 500ms ease-in-out;
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
 .menu-container.is-open {
     transform: translateX(0);
