--- a/sass/components/_menu-toggle.scss
+++ b/sass/components/_menu-toggle.scss
@@ -2,6 +2,9 @@
     display: block;
     align-items: center;
     justify-content: space-between;
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
 .menu__toggle {
     position: absolute;
