--- a/css/main.css
+++ b/css/main.css
@@ -1005,7 +1005,6 @@ header .container {
 
 .site-nav {
   margin-right: 84px;
-  margin-top: 32px;
 }
 
 @media screen and (max-width: 767px) {
@@ -1054,9 +1053,9 @@ header .container {
   display: flex;
   align-items: center;
   letter-spacing: 0.02em;
-  font-size: 14px;
+  font-size: 12px;
   color: #757575;
-  line-height: 16px;
+  line-height: 14px;
   font-weight: 500;
   fill: currentColor;
   transition-property: #ffffff;
@@ -1080,7 +1079,7 @@ header .container {
   border-radius: 2px;
   background: #2196f3;
   display: block;
-  bottom: -1px;
+  bottom: -3px;
   opacity: 0;
   transform: scaleX(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1090,6 +1089,10 @@ header .container {
 .current:focus::after {
   opacity: 1;
   transform: scaleX(1);
+}
+
+.left {
+  padding: 32px 0;
 }
 
 .hero {
