--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -66,7 +66,6 @@ header .container {
         display: none;
     }
     margin-right: 84px;
-    margin-top: 32px;
 }
 
 .header-contacts {
@@ -102,7 +101,7 @@ header .container {
     display: flex;
     align-items: center;
     letter-spacing: 0.02em;
-    @include font(14px, $secondary-title-color, 16px, 500);
+    @include font(12px, $secondary-title-color, 14px, 500);
     fill: currentColor;
     transition-property: $btn-color;
     transition-duration: 250ms;
@@ -125,7 +124,7 @@ header .container {
         border-radius: 2px;
         background: $active-color;
         display: block;
-        bottom: -1px;
+        bottom: -3px;
         opacity: 0;
         transform: scaleX(0);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -136,4 +135,7 @@ header .container {
 .current:focus::after {
     opacity: 1;
     transform: scaleX(1);
+}
+.left {
+    padding: 32px 0;
 }
