--- a/css/main.css
+++ b/css/main.css
@@ -957,6 +957,12 @@ header {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 1200px) {
+  .logo-nav {
+    margin: 24px 93px 25px 0;
+  }
+}
+
 .logo_white {
   color: #ffffff;
 }
@@ -979,6 +985,12 @@ header .container {
   width: 100%;
 }
 
+@media screen and (min-width: 1200px) {
+  .nav {
+    justify-content: flex-start;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .contacts {
     display: none;
@@ -989,6 +1001,15 @@ header .container {
   .contacts {
     display: block;
     padding: 21px 15px 21px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
   }
 }
 
@@ -1049,6 +1070,13 @@ header .container {
   padding-bottom: 10px;
 }
 
+@media screen and (min-width: 1200px) {
+  .contacts__link:not(:last-child) {
+    padding-bottom: 0;
+    margin-right: 30px;
+  }
+}
+
 .contacts__links1 {
   display: flex;
   align-items: center;
@@ -1083,6 +1111,12 @@ header .container {
   opacity: 0;
   transform: scaleX(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: -1px;
+  }
 }
 
 .current:hover::after,
