--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,10 +19,12 @@ header {
     display: flex;
     align-items: center;
     margin: 16px 0 16px 15px;
-    // margin-right: 93px;
     font-style: normal;
     @include font(24px, $active-color, 28px, bold);
     letter-spacing: 0.03em;
+    @media screen and (min-width: 1200px) {
+        margin: 24px 93px 25px 0;
+    }
 }
 .logo_white {
     color: $btn-color;
@@ -41,6 +43,9 @@ header .container {
 .nav {
     justify-content: space-between;
     width: 100%;
+    @media screen and (min-width: 1200px) {
+        justify-content: flex-start;
+    }
 }
 .contacts {
     @media screen and (max-width: 767px) {
@@ -50,6 +55,12 @@ header .container {
         display: block;
         padding: 21px 15px 21px 0;
     }
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 .contacts__link {
     color: $primary-title-color;
@@ -57,7 +68,6 @@ header .container {
         display: block;
         align-items: center;
         flex-wrap: wrap;
-        // margin-right: 15px;
         color: $secondary-title-color;
     }
 }
@@ -94,6 +104,10 @@ header .container {
     &:not(:last-child) {
         color: $secondary-title-color;
         padding-bottom: 10px;
+        @media screen and (min-width: 1200px) {
+            padding-bottom: 0;
+            margin-right: 30px;
+        }
     }
 }
 
@@ -128,6 +142,9 @@ header .container {
         opacity: 0;
         transform: scaleX(0);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        @media screen and (min-width: 1200px) {
+            bottom: -1px;
+        }
     }
 }
 
