--- a/css/main.css
+++ b/css/main.css
@@ -1131,7 +1131,7 @@ header .container {
 
 .hero {
   width: 100%;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Hero/hero-mob-1x-min.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1142,10 +1142,35 @@ header .container {
   margin-bottom: 60px;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Hero/hero-mob-2x-min.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Hero/hero-tab-1x-min.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Hero/hero-tab-2x-min.jpg);
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/hero.jpg);
     margin-bottom: 94px;
     padding: 200px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Hero/hero-desktop-2x-min.jpg);
   }
 }
 
@@ -1416,6 +1441,7 @@ footer .container {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   display: flex;
+  justify-content: center;
   padding-bottom: 20px;
 }
 
@@ -1437,17 +1463,21 @@ footer .container {
 
 .social-container {
   width: 206px;
-  margin-left: 70px;
   margin-top: 68px;
 }
 
 .wrap-footer-container {
-  display: flex;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .wrap-footer-container {
+    display: flex;
+  }
 }
 
 .footer-form {
-  margin-top: 72px;
-  margin-left: 93px;
+  margin-top: 60px;
 }
 
 .footer-form__title {
@@ -1460,6 +1490,7 @@ footer .container {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   display: flex;
+  justify-content: center;
   padding-bottom: 20px;
 }
 
