--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url(../img/hero.jpg);
+        url(/img/Hero/hero-mob-1x-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -14,9 +14,53 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 60px;
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url(/img/Hero/hero-mob-2x-min.jpg);
+    }
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url(/img/Hero/hero-tab-1x-min.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+            background-image: linear-gradient(
+                    to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)
+                ),
+                url(/img/Hero/hero-tab-2x-min.jpg);
+        }
+    }
     @media screen and (min-width: 1200px) {
+        background-image: linear-gradient(
+                to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)
+            ),
+            url(/img/hero.jpg);
         margin-bottom: 94px;
         padding: 200px 0;
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+            background-image: linear-gradient(
+                    to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)
+                ),
+                url(/img/Hero/hero-desktop-2x-min.jpg);
+        }
     }
 }
 .hero-btnn {
