--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url(/img/Hero/hero-mob-1x-min.jpg);
+        url(/img/hero-mob-1x-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -22,7 +22,7 @@
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)
             ),
-            url(/img/Hero/hero-mob-2x-min.jpg);
+            url(/img/hero-mob-2x-min.jpg);
     }
     @media screen and (min-width: 768px) {
         background-image: linear-gradient(
@@ -30,7 +30,7 @@
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)
             ),
-            url(/img/Hero/hero-tab-1x-min.jpg);
+            url(/img/hero-tab-1x-min.jpg);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
@@ -39,7 +39,7 @@
                     rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)
                 ),
-                url(/img/Hero/hero-tab-2x-min.jpg);
+                url(/img/hero-tab-2x-min.jpg);
         }
     }
     @media screen and (min-width: 1200px) {
@@ -59,7 +59,7 @@
                     rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)
                 ),
-                url(/img/Hero/hero-desktop-2x-min.jpg);
+                url(/img/hero-desktop-2x-min.jpg);
         }
     }
 }
