--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,18 @@ main {
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
