--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,12 +2,12 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
-    // @media screen and (max-width: 480px) {
-    //     width: 480px;
-    // }
-    // @media screen and (min-width: 480px) {
-    //     width: 480px;
-    // }
+    @media screen and (max-width: 480px) {
+        width: 480px;
+    }
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
     @media screen and (min-width: 768px) {
         width: 768px;
     }
