--- a/css/main.css
+++ b/css/main.css
@@ -1479,6 +1479,12 @@ footer .container {
   margin-top: 60px;
 }
 
+.form-email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .footer-form__title {
   font-family: inherit;
   font-style: normal;
@@ -1504,7 +1510,8 @@ footer .container {
   border-radius: 4px;
   text-align: center;
   padding-left: 29px;
-  margin-left: 12px;
+  margin-top: 20px;
+  margin-bottom: 60px;
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
