--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -104,7 +104,13 @@ footer .container {
 }
 .footer-form {
     margin-top: 60px;
+
     // margin-left: 93px;
+}
+.form-email {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .footer-form__title {
     font-family: inherit;
@@ -127,7 +133,9 @@ footer .container {
     border-radius: 4px;
     text-align: center;
     padding-left: 29px;
-    margin-left: 12px;
+    // margin-left: 12px;
+    margin-top: 20px;
+    margin-bottom: 60px;
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
