--- a/css/main.css
+++ b/css/main.css
@@ -380,7 +380,7 @@ main {
 }
 
 .form-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1363,14 +1363,21 @@ footer .container {
 }
 
 .footer-left-box {
-  display: inline-block;
+  display: flex;
   margin: 60px 0;
   letter-spacing: 0.03em;
-  width: 231px;
+  /* width: 231px; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 0.03em;
 }
 
 .footer-text {
   width: 231px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-text__list {
