--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,15 +2,22 @@ footer .container {
     background-color: #2f303a;
 }
 .footer-left-box {
-    display: inline-block;
+    display: flex;
     margin: 60px 0;
+    letter-spacing: 0.03em;
+    /* width: 231px; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     // margin-top: 56px;
     // margin-bottom: 64px;
     letter-spacing: 0.03em;
-    width: 231px;
 }
 .footer-text {
     width: 231px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .footer-text__list {
     font-size: 14px;
