--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -30,7 +30,7 @@
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)
             ),
-            url(/img/hero-tab-1x-min.jpg);
+            url(./img/hero-tab-1x-min.jpg);
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
@@ -48,7 +48,7 @@
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)
             ),
-            url(/img/hero.jpg);
+            url(./img/hero.jpg);
         margin-bottom: 94px;
         padding: 200px 0;
         @media (min-device-pixel-ratio: 2),
