--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -180,6 +180,7 @@ footer .container {
     padding-left: 29px;
     margin-top: 20px;
     margin-bottom: 60px;
+    outline: none;
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
